# Django_Core

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/cart/: admin.py  exceptions.py  models.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py
apps/cart/services/: payment_service.py
apps/docs/: exceptions.py  models.py  urls.py  views.py
apps/docs/management/commands/: initialize_prices.py
apps/docs/migrations/: 0001_initial.py
apps/docs/services/: docs_service.py
apps/users/: context_processors.py  exceptions.py  forms.py  urls.py  views.py
apps/users/services/: auth_service.py
config/: settings.py  urls.py
config/management/commands/: wait_for_db.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
static/css/: styles.css
templates/: base.html
templates/analyze/: analyze.html
templates/auth/: login.html  register.html
templates/cart/: cart.html
templates/docs/: get_text.html
templates/main/: main.html
templates/upload/: upload.html
tests/: test_add_to_cart.py  test_analyze_file.py  test_confirm_all_payments.py  test_confirm_payment.py  test_delete_file.py  test_get_text.py  test_main_page.py  test_remove_from_cart.py  test_upload_photos.py  test_view_cart.py
